@@ -3,10 +3,7 @@ package com.library.book_service.util.impl;
 import com.library.book_service.dtos.requests.BookRequest;
 import com.library.book_service.dtos.requests.CategoryRequest;
 import com.library.book_service.dtos.requests.NewBookRequest;
-import com.library.book_service.dtos.responses.BookResponse;
-import com.library.book_service.dtos.responses.BookResponseSimple;
-import com.library.book_service.dtos.responses.CategoryResponse;
-import com.library.book_service.dtos.responses.PageResponse;
+import com.library.book_service.dtos.responses.*;
 import com.library.book_service.entities.Book;
 import com.library.book_service.entities.Category;
 import com.library.book_service.util.Mapping;
@@ -18,6 +15,46 @@ import java.util.stream.Collectors;
 
 @Component
 public class MappingImpl implements Mapping {
+
+    @Override
+    public void toBook(Book book, NewBookRequest updated, String imageUrl){
+        book.setBookCode(updated.getBookCode());
+        book.setCategories(toCategories(updated.getCategories()));
+        book.setAuthor(updated.getAuthor());
+        book.setEdition(updated.getEdition());
+        book.setNumberPage(updated.getNumberPage());
+        book.setName(updated.getName());
+        book.setNumber(updated.getNumber());
+        book.setPrice(updated.getPrice());
+        book.setPublicationDate(updated.getPublicationDate());
+        book.setShortDescription(updated.getShortDescription());
+        if(imageUrl != null){
+            book.setImageUrl(imageUrl);
+        }
+    }
+
+    @Override
+    public PageResponse<BookSimpleResponse> toPagePageBookSimpleResponse(Page<Book> books){
+        return PageResponse.<BookSimpleResponse>builder()
+                .totalPages(books.getTotalPages())
+                .content(books.getContent().stream().map(this::toBookSimpleResponse).toList())
+                .pageSize(books.getSize())
+                .totalElements(books.getTotalElements())
+                .pageNumber(books.getNumber())
+                .build();
+    }
+
+    @Override
+    public BookSimpleResponse toBookSimpleResponse(Book request){
+        return BookSimpleResponse.builder()
+                .id(request.getId())
+                .price(request.getPrice())
+                .numberBorrowed(request.getNumberBorrowed())
+                .name(request.getName())
+                .author(request.getAuthor())
+                .language(request.getLanguage())
+                .build();
+    }
 
     @Override
     public List<BookResponse> toBookResponses(List<Book> books){
@@ -73,19 +110,7 @@ public class MappingImpl implements Mapping {
 
     @Override
     public BookResponse toBookResponse(Book book, NewBookRequest updated, String imageUrl){
-        book.setBookCode(updated.getBookCode());
-        book.setCategories(toCategories(updated.getCategories()));
-        book.setAuthor(updated.getAuthor());
-        book.setEdition(updated.getEdition());
-        book.setNumberPage(updated.getNumberPage());
-        book.setName(updated.getName());
-        book.setNumber(updated.getNumber());
-        book.setPrice(updated.getPrice());
-        book.setPublicationDate(updated.getPublicationDate());
-        book.setShortDescription(updated.getShortDescription());
-        if(imageUrl != null){
-            book.setImageUrl(imageUrl);
-        }
+        toBook(book, updated, imageUrl);
         return toBookResponse(book);
     }
 
@@ -168,7 +193,7 @@ public class MappingImpl implements Mapping {
     public List<Category> toCategories(List<CategoryRequest> request){
         return request.stream()
                 .map(this::toCategory)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
